# deno-simple-module-loader

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: mod.rs
tests/files/: basic_main.js  http_redirect_main.js  json_import_main.js  json_test1.json  json_test2.json
