[package]
name = "deno-simple-module-loader"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/andreubotella/deno-simple-module-loader"
description = "A simple implementation of deno_core's ModuleLoader trait which supports loading modules from the network."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.112.0"
reqwest = "0.11.8"
tokio = { version = "1.15.0", features = ["fs"] }
data-url = "0.1.1"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt", "macros"] }
warp = "0.3.2"
lazy_static = "1.4.0"
